--- a/ferret-tasks.html
+++ b/ferret-tasks.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="container">
-  <h1>Your tasks</h1>
+  <h1>Tasks</h1>
   <input type="text" id="taskInput" placeholder="Add new task">
   <button onclick="addTask()">Add Task</button>
   <ul id="taskList"></ul>
