--- a/ferret-tasks.html
+++ b/ferret-tasks.html
@@ -16,7 +16,7 @@
 </div>
 
 <script src="script.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@0.2.1/confetti.min.js"></script>
+<script src="confetti.min.js"></script>
 
 </body>
 </html>
