--- a/ferret-tasks.html
+++ b/ferret-tasks.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ferret Tasks</title>
+  <title>To-Do List</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <div class="container">
-  <h1>Tasks</h1>
+  <h1>To-Do List</h1>
   <input type="text" id="taskInput" placeholder="Add new task">
   <button onclick="addTask()">Add Task</button>
   <ul id="taskList"></ul>
+  <img id="gif" src="your_gif_url_here" style="display: none;">
 </div>
 
 <script src="script.js"></script>
