--- a/ferret-tasks.html
+++ b/ferret-tasks.html
@@ -9,11 +9,11 @@
 <body>
 
 <div class="container">
-  <h1>To-Do List</h1>
+  <h1>Ferret Tasks</h1>
   <input type="text" id="taskInput" placeholder="Add new task">
   <button onclick="addTask()">Add Task</button>
   <ul id="taskList"></ul>
-  <img id="gif" src="your_gif_url_here" style="display: none;">
+  <img id="gif" src="confetti.gif" style="display: none;">
 </div>
 
 <script src="script.js"></script>
